* 1.3.12

    NEW FUNCTIONALITY

    - added 'setEnabled' / 'isEnabled' methods to selectEndpoint return value
	- added 'ConnectorZIndex' optional default. use this to get hovered connectors to appear on top of others.
	
	ISSUES RESOLVED
	
	269 - Image Endpoint remains in DOM if removed quickly enough after creation
	270 - Connections repainted when setVisible(false) had been called


* 1.3.11

    NEW FUNCTIONALITY
	
	- added 'selectEndpoints' method to jsPlumb. This works in a similar way to jsPlumb.select (which is for Connections).
	- added isSuspendDrawing method
    - added "connection" as alias to existing "jsPlumbConnection" event. BOTH EVENTS are fired.  So do not register for them both!
	- added "connectionDetached" as alias to "jsPlumbConnectionDetached" event.  As above - both events are fired.
	- added 'maxConnections' event to Endpoints.
	- added 'onMaxConnections' callback option to makeTarget and makeSource
	
	
	ISSUES RESOLVED
	
	261 - add 'maxConnections' event to Endpoint
	264 - selectEndpoints enhancement
	266 - makeSource does not honor maxConnections parameter
	267 - setLabel ignores suspendDrawing flag
	268 - deleteEveryEndpoint should suspend drawing before it begins and restore once its done.
	
	

* 1.3.10


	BACKWARDS COMPATIBILITY ISSUES

	- The 'clearListeners' method on Connection, Endpoint and jsPlumb has been renamed to 'unbind'.

	
	NEW FUNCTIONALITY


	- makeSource can now be called with a 'filter' parameter which allows you to respond to mouse events only on the parts of the element you want to.
	- Flowchart connector supports a different length stub at each end (supply an array of two integers instead of just a single integer)
	- The position of Connector overlays can now be specified as an absolute value, with positive values meaning distance from source and negative values meaning distance from target.


	ISSUES RESOLVED

	224 - 'absolute' overlay position